# changelog-ui

./: .gitignore  api.py  next.config.js  package-lock.json  package.json  pyproject.toml
app/: fonts.ts  layout.tsx  page.tsx
app/approved/: page.tsx
app/pending/: page.tsx
components/ui/: EditLogModal.tsx  button.tsx  dialog.tsx
contexts/: AppContext.tsx  LogContext.tsx
lib/: api.ts
types/: logs.ts
